# Open-Jarvis

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  background_listener.py  code_helper.py  computer_settings.py  config_manager.py  desktop.py  dev_agent.py  docker-compose.yml  error_handler.py  game_updater.py  main.py  open_app.py  pyproject.toml  readme.md  remote_client.py  remote_server.py  requirements-dev.txt  requirements.txt  send_message.py  setup_autostart.py  start_listener.vbs  stetige-verbesserungen.agent.md  task_queue.py  ui.py  youtube_video.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
actions/: __init__.py  bt_control.py  code_helper.py  computer_control.py  computer_settings.py  computer_use.py  desktop.py  dev_agent.py  docker_control.py  email_calendar.py  file_processor.py  flight_finder.py  game_updater.py  generative_graphics.py  hyper_connectivity.py  network_status.py  obsidian_control.py  reminder.py  smart_home.py  stt.py  system_integration.py  tv_control.py  wake_word.py  web_search.py  worldmonitor.py  youtube_video.py  ytmusic.py
agent/: executor.py
config/: api_keys.json.example  devices.json  docker.json  email.json.example  mcp.json  obsidian.json.example  proactive.json  smart_home.json  telegram.json.example
core/: __init__.py  local_llm.py  mcp_bridge.py  memory_store.py  notifier.py  plugin_loader.py  proactive_intelligence.py  prompt.txt  reflector.py  self_healer.py  self_improver.py  self_modifier.py  telegram_bot.py  test_suite.py
docs/: ARCHITECTURE.md  DEVELOPING.md  DOCKER.md  SETUP.md  TOOLS.md
plugins/: example_plugin.py
tv_interface/: tv_server.py
web_ui/: dashboard.html  index.html  jarvis.html  mirror.html
