[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-jarvis"
version = "1.0.0"
description = "The Ultimate Open-Source JARVIS AI Assistant"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Open-Jarvis Contributors" }
]
requires-python = ">=3.12"
keywords = ["jarvis", "ai", "voice-assistant", "gemini", "ollama"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "sounddevice>=0.4.6",
    "google-genai>=1.0.0",
    "pillow>=10.0.0",
    "pyaudio>=0.2.14",
    "numpy>=1.24",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.7",
    "pre-commit>=3.5",
]
local-llm = ["ollama>=0.1", "chromadb>=0.4"]
smart-home = ["phue>=1.3", "pyShelly>=0.3"]
tv = ["pychromecast>=14.0"]
mcp = ["mcp>=0.1", "docker>=7.0"]

[project.urls]
Homepage = "https://github.com/timhofmann27-bot/Open-Jarvis"
Documentation = "https://github.com/timhofmann27-bot/Open-Jarvis/tree/main/docs"
Issues = "https://github.com/timhofmann27-bot/Open-Jarvis/issues"
Changelog = "https://github.com/timhofmann27-bot/Open-Jarvis/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["core", "actions"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json.example", "*.html"]

# ──────────────────────────────────────────────────────────────────
# Ruff: Fast Python linter + formatter
# ──────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    "__pycache__",
    "*.egg-info",
    "memory",
    "desktop",
    "build",
    "dist",
]

[tool.ruff.lint]
# Default rules + a few extras
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PTH",    # use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "B008",    # do-not-perform-function-call-in-default-argument
    "SIM108",  # use ternary operator
    "N806",    # variable-in-capital-case (we use ALL_CAPS for constants - it's fine)
    "ERA001",  # commented-out-code (sometimes useful)
    "E402",    # module-level-import-not-at-top-of-file (lazy imports for fast startup)
    "E722",    # bare-except (we want to allow this for safety)
    "E731",    # lambda-assignment (we use these in places)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["core", "actions"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ──────────────────────────────────────────────────────────────────
# Black: Code formatter (kept in sync with ruff)
# ──────────────────────────────────────────────────────────────────
[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

# ──────────────────────────────────────────────────────────────────
# MyPy: Static type checker
# ──────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
exclude = [
    "memory/",
    "desktop/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "pyautogui.*",
    "playwright.*",
    "win32com.*",
    "pyttsx3.*",
]
ignore_missing_imports = true

# ──────────────────────────────────────────────────────────────────
# Pytest: Test runner
# ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:google\\.generativeai",
    "ignore::FutureWarning:google\\.generativeai",
]

# ──────────────────────────────────────────────────────────────────
# Coverage
# ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["core", "actions"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/memory/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
fail_under = 30

# ──────────────────────────────────────────────────────────────────
# Project-specific
# ──────────────────────────────────────────────────────────────────
[tool.open-jarvis]
model = "tinyllama"
test_timeout = 30
max_long_lines = 120
